examples/networkpolicy-tests/app2/deploy/network-policies/allow-from-app1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-app1
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from: #allow
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: app1
