examples/networkpolicy-tests/app2/deploy/network-policies/allow-other-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-policy-1
spec:
  podSelector: 
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  - to: #allow
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
  - to:
    - ipBlock:
        cidr: 207.171.166.22/32 # amazonaws.com
    - ipBlock:
        cidr: 72.21.210.29/32 # amazonaws.com
    - ipBlock:
        cidr: 72.21.206.80/32 # amazonaws.com
    - ipBlock:
        cidr: 34.235.198.240/32 # redhat.com
    - ipBlock:
        cidr: 52.200.142.250/32 # redhat.com
